tests/baselines/reference/privateNameNestedMethodAccess.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameNestedMethodAccess.ts(11,25): error TS18014: The property '#bar' cannot be accessed on type 'C' within this class because it is shadowed by another private identifier with the same spelling.


==== tests/cases/conformance/classes/members/privateNames/privateNameNestedMethodAccess.ts (1 errors) ====
    const C = class {
        #foo = 42;
        #bar() { new C().#baz; }
        get #baz() { return 42; }
    
        m() {
            return class D {
                #bar() {}
                constructor() {
                    new C().#foo;
                    new C().#bar; // Error
                            ~~~~
!!! error TS18014: The property '#bar' cannot be accessed on type 'C' within this class because it is shadowed by another private identifier with the same spelling.
!!! related TS18017 tests/cases/conformance/classes/members/privateNames/privateNameNestedMethodAccess.ts:8:13: The shadowing declaration of '#bar' is defined here
!!! related TS18018 tests/cases/conformance/classes/members/privateNames/privateNameNestedMethodAccess.ts:3:5: The declaration of '#bar' that you probably intended to use is defined here
                    new C().#baz;
                    new D().#bar;
                }
            }
        }
    }
    